--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,31 @@
+# ==== Core Backend ====
 Flask~=3.1.1
 flask-cors~=6.0.1
 
-# Whisper + dependencies
+# ==== Whisper and Related Libraries ====
 git+https://github.com/openai/whisper.git
 openai-whisper
 faster-whisper
-
 ffmpeg-python
 numpy==1.26.4
 torch~=2.2.2
-torchaudio  # Optional but improves audio support for Whisper
+torchaudio  # Optional but improves audio support
 soundfile
+
+# ==== Text-to-Speech (TTS) ====
 gTTS
-# Transformers for summarization or TTS if needed
+TTS==0.22.0
+pydub
+espeakng  # Note: Requires system-level install
+
+# ==== NLP Models ====
 transformers~=4.38.2
 sentencepiece
+
+# ==== Machine Learning Tools ====
 scikit-learn~=1.7.0
 scipy~=1.16.0
 
-# TTS - Coqui TTS (optional, if you're using it)
-TTS==0.22.0
-pydub
-soundfile
-espeakng  # For Coqui to work properly (required in system too)
-
-# Other tools
+# ==== Miscellaneous ====
 uuid
 indic-transliteration
